<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Misc -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="bar">|</string>
        <string name="ok">Ok</string>
	<!-- App Bar -->
	<string name="app_name">Chess Vision Plus</string>
	<!-- above the board -->
	<string name="tap">Tap: </string>
        <string name="current">Current: </string>
        <string name="best">Best: </string>
	<!-- beneath the board -->
	<string name="correct">CORRECT</string>
	<string name="incorrect">INCORRECT</string>
	<string name="next_problem">Next Problem</string>
	<!-- main menu stuff -->
	<string name="square_names">Name the Square</string>
	<string name="settings">Settings</string>
	<string name="square_names_settings">\"Name the Square\" Settings</string>
        <string name="basic_knight_sight">Basic Knight Sight</string>
	<!-- Name the Square setting stuff -->
	<string name="clear_scores">Clear High Score</string>
	<string name="clear_scores_title">Clearing High Scores</string>
	<string name="clear_scores_message">Are you sure you want to clear your high scores for \"Name the Square\"? It can\'t be undone.</string>
        <string name="clear_scores_confirm_title">Done</string>
        <string name="clear_scores_confirm">Scores cleared successfully</string>
</resources>