<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent">
	<TextView
		 xmlns:android="http://schemas.android.com/apk/res/android"
		 android:id="@+id/tap"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:textSize="48sp"
		 android:paddingTop="5dp"
		 android:paddingBottom="5dp"
		 android:text="@string/tap" />
	<TextView
		 xmlns:android="http://schemas.android.com/apk/res/android"
		 android:id="@+id/square_name"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:textSize="48sp"
		 android:paddingTop="5dp"
		 android:paddingBottom="5dp"
		 android:paddingLeft="5dp"
		 android:layout_toRightOf="@id/tap" />
	<TextView
		 android:id="@+id/bar_1"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:textSize="48sp"
		 android:paddingTop="4dp"
		 android:paddingLeft="5dp"
		 android:layout_toRightOf="@id/square_name"
		 android:text="@string/bar" />
        <TextView
                android:id="@+id/current_score_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="28sp"
                android:paddingTop="4dp"
                android:paddingLeft="5dp"
                android:paddingBottom="0dp"
                android:layout_toRightOf="@id/bar_1"
                android:text="@string/current"/>
	<TextView
		 android:id="@+id/current_score"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:textSize="28sp"
		 android:paddingTop="4dp"
		 android:paddingLeft="5dp"
                 android:paddingBottom="0dp"
		 android:layout_toRightOf="@id/current_score_label" />
        <TextView
                android:id="@+id/best_score_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="28sp"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:paddingBottom="2dp"
                android:layout_toRightOf="@id/bar_1"
                android:layout_below="@id/current_score_label"
                android:text="@string/best" />
	<TextView
		android:id="@+id/best_score"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="28sp"
		android:paddingTop="0dp"
		android:paddingLeft="5dp"
                android:paddingBottom="2dp"
		android:layout_toRightOf="@id/best_score_label"
                android:layout_below="@id/current_score" />
    <GridView
    	 xmlns:android="http://schemas.android.com/apk/res/android"
    	 android:id="@+id/board"
    	 android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:horizontalSpacing="0dp"
    	 android:stretchMode="columnWidth"
    	 android:numColumns="8"
		 android:layout_below="@id/tap"
		 android:splitMotionEvents="false"
		 android:windowEnableSplitTouch="false" />
	<TextView
		 xmlns:android="http://schemas.android.com/apk/res/android"
		 android:id="@+id/answer"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:textSize="48sp"
		 android:paddingTop="150dp"
		 android:layout_centerInParent="true"
		 android:layout_below="@id/board" />
	<Button
		 xmlns:android="http://schemas.android.com/apk/res/android"
		 android:id="@+id/next_problem"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/next_problem"
		 android:onClick="nextProblem"
		 android:layout_below="@id/answer"
		 android:visibility="gone"
		 android:layout_centerInParent="true"
		 android:clickable="false" />
	<TextView
		 android:id="@+id/correct_square"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:textSize="36sp"
		 android:visibility="gone" />
	<TextView
		 android:id="@+id/incorrect_square"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:textSize="36sp"
		 android:visibility="gone" />
</RelativeLayout>